--- a/Homework05/Develop/index.html
+++ b/Homework05/Develop/index.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" /> -->
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="style.css" />
   <title>Work Day Scheduler</title>
@@ -19,7 +18,7 @@
   <div class="container">
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler<i class="far fa-calendar-alt" style="margin-left: 25px;" ;></i></h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p class="lead">Get your day together with this calendar app!</p>
       <div id="clock"
         style="width: 400px; height: 100px; background-color: black; border-radius: 5px; display: flex; align-items: center; justify-content: center; color: greenyellow; font-size: 3em; margin-left: 30%;">
         The Time Is...</div>
@@ -150,6 +149,7 @@ $("#setEvent").on("click", function (event) {
   event.preventDefault;
   var userEvent = $("#savedEvent").val();
   console.log(userEvent);
+  
 })
 
 </script>
